			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03b: *********************************

BUG: (08/05/05, RK) Warning: "Improvement" below disables NCC GUI until GUI is changed to accomodate new data structures.

IMP: (08/05/05, RK) Improvement to Local Partitioning algorithm

IMP: (08/05/05, DN) Yet another Spice format: Epic simulation output (for nanosim).
    Format choice list in SpiceTab dialog has one more item - "Epic". 

BUG: (08/05/05, DN) Problem with arc and tail extensions deleting a jog from arc.
FIX: In CircuitChanges.reconnectArcs fill "ra.extendHead/Tail" from proper arc end only.

BUG: (08/05/05, DN) Duplicating export causes exception (Bug #443).
FIX: ElectricObject.uniqueObjectName retries until it obtains Cell.isUniqueName or fail in 100 iterations.
     In Export.newInstance check if uniqueObjectName returns null.

BUG: (08/04/05, DN) Problems with arc head and tail extensions (by Frankie Liu).
FIX: In EditMenu.InsertJogPoint set head and tail extensions.

IMP: (08/02/05, GVG) OpenDialog AWT way on MacOS only when no directories must be available

IMP: (08/01/05, GVG) Calling CheckAndRepair after OptionReconcile dialog and layers switch in the tech.

IMP: (08/01/05, JKG) Modified Output netlisters to get netlist from HierarchyEnumerator so
that the connectivity will be correct for parasistic versus explicit resistors.

BUG: (07/30/05, GVG) Error in Quick.foundSmallSizeDefect() due to rounding errors. Reported by Boz
FIX: DBMath.pointInsideRect() uses isGreaterThan instead of operators. This could slow the code.

IMP: (07/30/05, GVG) Length/width of poly resistors (schematics/layout) can be changed in GetInfoNode
(similar to transistors). Schematic poly resistors display variables. Reported by Boz.

IMP/MAN: (07/29/05, GVG) Ability to check and repair libraries if original files contain